--- a/IPL_Data_EDA.ipynb
+++ b/IPL_Data_EDA.ipynb
@@ -2,15 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -1550,6 +1541,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Top ten batsmen with most runs in first six overs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 167,
    "metadata": {},
@@ -1588,11 +1586,113 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 188,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Top 10 bowlers with most wickets for IPL 2008-2016"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>player_dismissed</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bowler</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>SL Malinga</th>\n",
+       "      <td>170</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A Mishra</th>\n",
+       "      <td>142</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DJ Bravo</th>\n",
+       "      <td>137</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Harbhajan Singh</th>\n",
+       "      <td>136</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PP Chawla</th>\n",
+       "      <td>133</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>R Vinay Kumar</th>\n",
+       "      <td>125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A Nehra</th>\n",
+       "      <td>121</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Z Khan</th>\n",
+       "      <td>119</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>B Kumar</th>\n",
+       "      <td>117</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>R Ashwin</th>\n",
+       "      <td>110</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 player_dismissed\n",
+       "bowler                           \n",
+       "SL Malinga                    170\n",
+       "A Mishra                      142\n",
+       "DJ Bravo                      137\n",
+       "Harbhajan Singh               136\n",
+       "PP Chawla                     133\n",
+       "R Vinay Kumar                 125\n",
+       "A Nehra                       121\n",
+       "Z Khan                        119\n",
+       "B Kumar                       117\n",
+       "R Ashwin                      110"
+      ]
+     },
+     "execution_count": 207,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ipl[['bowler','player_dismissed']].groupby(by='bowler').count().sort_values(by='player_dismissed',ascending=False).head(10)"
+   ]
   },
   {
    "cell_type": "code",
